update for latest dreamland hopefully

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,8 @@
 
     "jsx":"react",
     "jsxFactory":"h",
-    "jsxFragmentFactory":"YOU_CANT_USE_FRAGMENTS",
-    "types": ["@mercuryworkshop/alicejs"],
+    "jsxFragmentFactory":"Fragment",
+    "types": ["dreamland"],
 
     "declaration": true,
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
