--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "dreamland-router",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "",
     "keywords": [],
     "author": "coolelectronics",
     "scripts": {
         "build": "rollup -c",
-        "watch": "rollup -cw"
+        "watch": "rollup -cw",
+        "postinstall": "npm run build"
     },
     "type": "module",
     "license": "LGPL-3.0",
@@ -20,7 +21,7 @@
     "types": "dist/index.d.ts",
     "devDependencies": {
         "dreamland": "^0.0.10",
-        "esbuild": "^0.20.0",
+        "esbuild": "^0.20.2",
         "esbuild-plugin-d.ts": "^1.2.3",
         "rollup": "^4.11.0",
         "rollup-plugin-typescript2": "^0.36.0"
