--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "esbuild-plugin-d.ts": "^1.2.3",
     "rollup": "^4.17.2",
     "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
     "dreamland": "0.0.23-pre"
   }
 }
