--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "dreamland-router",
-  "version": "2.0.0",
-  "description": "",
-  "keywords": [],
-  "author": "velzie",
+  "name": "@dreamlandjs/dreamland-router",
+  "version": "1.0.0",
+  "description": "like react-router, but for dreamlandjs",
+  "author": "MercuryWorkshop",
+  "keywords": [
+    "javascript",
+    "dreamland",
+    "dreamland-js",
+    "dreamlandjs"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MercuryWorkshop/dreamland-router.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MercuryWorkshop/dreamland-router/issues"
+  },
+  "homepage": "https://github.com/MercuryWorkshop/dreamland-router#readme",
+  "type": "module",
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -cw",
-    "postinstall": "npm run build"
+    "prepack": "npm run build"
   },
-  "type": "module",
   "license": "LGPL-3.0",
   "exports": {
     "import": "./dist/index.js",
@@ -20,11 +33,11 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "devDependencies": {
-    "esbuild": "^0.20.2",
-    "esbuild-plugin-d.ts": "^1.2.3",
-    "rollup": "^4.17.2",
+    "dreamland": "0.0.25",
+    "esbuild": "^0.25.0",
+    "esbuild-plugin-d.ts": "^1.3.1",
+    "rollup": "^4.34.6",
     "rollup-plugin-typescript2": "^0.36.0",
-    "typescript": "^5.4.5",
-    "dreamland": "0.0.23-pre"
+    "typescript": "^5.7.3"
   }
 }
